--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -41,13 +41,15 @@
 <hr/>
 
 <div class="info">
+  
   <section class="info1">
   <h2>Digital Design</h2>
 
   <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
-  
-   <button>Learn More</button>
+    <section class="button">
+   <p>Learn More</p>
+    </section>
   </section>
 
 
@@ -56,8 +58,9 @@ eleifend. Mauris euismod facilisis iaculis.</p>
 
   <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
-   
-    <button>Learn More</button>
+    <section class="button">
+    <p>Learn More</p>
+    </section>
   </section>
 
   <section class="info1">
@@ -66,7 +69,9 @@ eleifend. Mauris euismod facilisis iaculis.</p>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <button>Learn More</button>
+    <section class="button">
+    <p>Learn More</p>
+    </section>
   </section>
 
 
@@ -76,7 +81,9 @@ eleifend. Mauris euismod facilisis iaculis.</p>
   <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <button>Learn More</button>
+    <section class="button">
+      <p>Learn More</p>
+    </section> 
   </section>
 
 
@@ -86,7 +93,9 @@ eleifend. Mauris euismod facilisis iaculis.</p>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-    <button>Learn More</button> 
+    <section class="button">
+    <p>Learn More</p>
+    </section>
   </section>
 
   <section class="info1">
@@ -95,24 +104,26 @@ eleifend. Mauris euismod facilisis iaculis.</p>
     <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-  <button>Learn More</button> 
+   <section class="button">
+  <p>Learn More</p>
+   </section>
   </section>
-</div>
-<hr/>
+</div><br>
+<hr/><br>
 <div class="facts">
   
   <section class="facts1">
-  <h2>Some Facts About Our Services</h2>
+      <h2>Some Facts About Our Services</h2>
 
   <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
 eleifend. Mauris euismod facilisis iaculis.</p>
 
-  <ol>
-    <li>Awesome thing</li>
-    <li>Amazing thing</li>
-    <li>Cool thing</li>
-    <li>Great thing</li>
-  </ol>
+  <ul><br>
+    <li>Awesome thing</li><br>
+    <li>Amazing thing</li><br>
+    <li>Cool thing</li><br>
+    <li>Great thing</li><br>
+  </ul>
   </section>
 
 
